--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,7 @@ a {
 }
 
 /* line 12, ../../../Documents/CODE/style_guide_v7/scss/component/_navigation.scss */
-.nav-link {
+.nav link {
   text-align: center;
   border-radius: 5px;
   padding: 10px 0;
@@ -529,7 +529,7 @@ a {
 }
 
 /* line 23, ../../../Documents/CODE/style_guide_v7/scss/component/_navigation.scss */
-.nav-link:hover {
+.nav link:hover {
   color: #fff;
   background-color: #58e1c1;
 }
