--- a/scss/component/_navigation.scss
+++ b/scss/component/_navigation.scss
@@ -7,9 +7,9 @@
     flex-basis: 100%;
     display: flex;
     flex-direction: column;
-  }
   
-  .nav-link {
+  
+  link {
     text-align: center;
     border-radius: 5px;
     padding: 10px 0;
@@ -20,8 +20,8 @@
       color .2s ease-in-out;
   }
   
-  .nav-link:hover {
+ link:hover {
     color: #fff;
     background-color: $color-background;
   }
-  
+}
