--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -5,15 +5,19 @@
 .btn {
     margin-top: 15px;
     width: 100%;
-    color: $color-button;
+    color: #fff;
     border: none;
     padding: 10px 0;
     text-transform: uppercase;
     border-radius: 5px;
+
+    &:hover {
+      background-color: $lighter-color;
+  }
   }
   
   .default {
-    background-color: #51ddfc;
+    background-color: $color-button;
   }
   
   .error {
