--- a/scss/component/_navigation.scss
+++ b/scss/component/_navigation.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
   
   
-  link {
+  &-link {
     text-align: center;
     border-radius: 5px;
     padding: 10px 0;
@@ -20,7 +20,7 @@
       color .2s ease-in-out;
   }
   
- link:hover {
+ &-link:hover {
     color: #fff;
     background-color: $color-background;
   }
