updated_errors_after_review

--- a/scss/component/_navigation.scss
+++ b/scss/component/_navigation.scss
@@ -21,7 +21,7 @@
   }
   
  &-link:hover {
-    color: #fff;
-    background-color: $color-background;
+    color: $color-hover;
+    background-color: $color-primary;
   }
 }
