--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -7,11 +7,19 @@
 $color-primary: #58e1c1;
 $color-secondary: #777;
 $color-link: #51ddfc;
-$color-text:#777;
-$color-button: #51ddff;
-$color-background:  #58e1c1;
-$lighter-color: lighten($color-button, 20%);
+$color-img: #ccc;
+$color-hover: #fff;
+
 
 /* Breakpoints */
 
 $break-m: 768px;
+
+
+/* buttons */
+
+$base-default: #51ddfc; 
+$base-error: #e4757a;
+$base-info: #927bc1;
+$base-success: #63cc82;
+$base-warning: #fd7856;
