--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -4,7 +4,7 @@
 
 * {
     font-family: 'Lato', sans-serif;
-    color: $color-text;
+    color: $color-secondary;
     box-sizing: border-box;
   }
   
