--- a/scss/component/_buttons.scss
+++ b/scss/component/_buttons.scss
@@ -5,33 +5,45 @@
 .btn {
     margin-top: 15px;
     width: 100%;
-    color: #fff;
+    color: $color-hover;
     border: none;
     padding: 10px 0;
     text-transform: uppercase;
     border-radius: 5px;
-
-    &:hover {
-      background-color: $lighter-color;
-  }
   }
   
   .default {
-    background-color: $color-button;
+    background-color: $base-default;
+     &:hover {
+     background-color: lighten($base-default, 15%);
+  }
   }
   
   .error {
-    background-color: #e4757a;
+    background-color: $base-error;
+         &:hover {
+     background-color: lighten($base-error, 15%);
+  }
   }
   
   .info {
-    background-color: #927bc1;
+    background-color: $base-info;
+    &:hover {
+      background-color: lighten($base-info, 15%);
+   }
   }
   
   .success {
-    background-color: #63cc82;
+    background-color: $base-success;
+    &:hover {
+      background-color: lighten($base-success, 15%);
+   }
   }
   
   .warning {
-    background-color: #fd7856;
+    background-color: $base-warning;
+    &:hover {
+      background-color: lighten($base-warning, 15%);
+   }
   }
+  
