--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -21,11 +21,11 @@
   }
   
   .theme.col-1 {
-    background-color: #927bc1;
+    background-color: $base-info;
   }
   
   .theme.col-2 {
-    background-color: #fd7856;
+    background-color: $base-warning;
   }
   
   .theme.col-3 {
@@ -53,15 +53,15 @@
   }
   
   .theme.col-9 {
-    background-color: #e4757a;
+    background-color: $base-error;
   }
   
   .theme.col-10 {
-    background-color: #63cc82;
+    background-color: $base-success;
   }
   
   .theme.col-11 {
-    background-color: #51ddfc;
+    background-color: $base-default;
   }
   
   .theme.col-12 {
